changed live wpm to live speed

--- a/frontend/static/html/pages/settings.html
+++ b/frontend/static/html/pages/settings.html
@@ -1215,7 +1215,7 @@
     <div class="section timerColor" section="">
       <h1>timer/progress color</h1>
       <div class="text">
-        Change the color of the timer/progress number/bar and live wpm number.
+        Change the color of the timer/progress number/bar and live speed number.
       </div>
       <div class="buttons">
         <div
@@ -1255,7 +1255,8 @@
     <div class="section timerOpacity" section="">
       <h1>timer/progress opacity</h1>
       <div class="text">
-        Change the opacity of the timer/progress number/bar and live wpm number.
+        Change the opacity of the timer/progress number/bar and live speed
+        number.
       </div>
       <div class="buttons">
         <div
@@ -1376,8 +1377,8 @@
       <div class="text">
         When enabled, the website will show all lines for word, custom and quote
         mode tests - otherwise the lines will be limited to 3, and will
-        automatically scroll. Using this could cause the timer text and live wpm
-        to not be visible.
+        automatically scroll. Using this could cause the timer text and live
+        speed to not be visible.
       </div>
       <div class="buttons">
         <div
@@ -2152,9 +2153,10 @@
   </div>
   <div class="settingsGroup hideElements">
     <div class="section showLiveWpm">
-      <h1>live wpm</h1>
+      <h1>live speed</h1>
+      <h1>live speed</h1>
       <div class="text">
-        Displays a live WPM speed during the test. Updates once every second.
+        Displays a live speed during the test. Updates once every second.
       </div>
       <div class="buttons">
         <div
